# vkguide

./: .gitignore  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/inc/: vk_engine.h  vk_images.h
